update: sync all services and core configurations